--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "dracula-ui": "^1.0.6",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-daisyui": "^4.0.0",
     "react-dom": "^18.2.0",
