--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dracula-ui": "^1.0.6",
     "gh-pages": "^5.0.0",
+    "nodemailer": "^6.9.3",
     "react": "^18.2.0",
     "react-daisyui": "^4.0.0",
     "react-dom": "^18.2.0",
