--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "dracula-ui": "^1.0.6",
+    "nodemailer": "^6.9.4",
     "react": "^18.2.0",
     "react-daisyui": "^4.0.0",
     "react-dom": "^18.2.0",
